2013-09-11  Will Newton  <will.newton@linaro.org>

	[BZ #15855]
	* malloc/malloc.c (__libc_pvalloc): Check the value of bytes
	does not overflow.

2013-09-10   Ondřej Bílka  <neleai@seznam.cz>

	* sysdeps/ieee754/dbl-64/e_j0.c: Remove DO_NOT_USE_THIS conditionals.
	* sysdeps/ieee754/dbl-64/e_j1.c: Likewise.
	* sysdeps/ieee754/dbl-64/s_erf.c: Likewise.
	* sysdeps/ieee754/dbl-64/s_expm1.c: Likewise.
	* sysdeps/ieee754/dbl-64/s_log1p.c: Likewise.

2013-09-10  Allan McRae  <allan@archlinux.org>

	[BZ #15748]
	* manual/arith.texi (Parsing of Floats): Clarify
	cross-reference.

	[BZ #15849]
	* manual/install.texi (Running make install): Mention
	--enable-pt-chown.
	* INSTALL: Regenerated.

2013-09-09  Maciej W. Rozycki  <macro@codesourcery.com>

	* csu/init-first.c (_init): Remove the !SHARED condition around
	FPU control word initialization.
	* elf/dl-support.c (_dl_fpu_control): New variable.
	(_dl_aux_init) <AT_FPUCW>: Initialize it.
	* math/test-fpucw.c [!FPU_CONTROL] (FPU_CONTROL): New macro.
	(main): Replace _FPU_DEFAULT with FPU_CONTROL throughout.
	* math/test-fpucw-static.c: New file.
	* math/test-fpucw-ieee.c: New file.
	* math/test-fpucw-ieee-static.c: New file.
	* math/Makefile (tests): Add `test-fpucw-ieee' and
	`$(tests-static)'.
	(tests-static): New variable.
	[($(build-shared),yes)] ($(addprefix $(objpfx),$(tests))): Move
	dependency to...
	[($(build-shared),yes)]
	($(addprefix $(objpfx),$(filter-out $(tests-static),$(tests)))):
	... this.
	[($(build-shared),yes)] ($(addprefix $(objpfx),$(tests-static))):
	New dependency.

2013-09-09  Allan McRae  <allan@archlinux.org>

	[BZ #15939]
	* manual/string.texi (Collation Functions): Fix typo in
	strcoll example.
	Reported by Suren Karapetyan <me@suren.karapetyan.name>.

	[BZ #15893]
	* stdlib/isomac.c (get_null_defines): Fix memory leak.

	[BZ #15892]
	* libio/memstream.c (open_memstream): Fix memory leak.
	* libio/wmemstream.c (open_wmemstream): Likewise.

	[BZ #15895]